# CoolWebsite

./: .gitignore  MANIFEST.in  README.md  Test.py  main.py  pyproject.toml  setup.py
coolwebsite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: default_ui.css  login.js  main.js  script.js
templates/: about.html  add_user.html  base.html  create_post.html  index.html  login.html  posts.html  profile.html  register.html  users.html
